89b210 - Reminder emails - link

--- a/app/views/reminder_mailer/vote.html.erb
+++ b/app/views/reminder_mailer/vote.html.erb
@@ -4,5 +4,5 @@
 
 <p>
   Just a reminder that there are some brackets ready for your vote. Head over to
-  bracket.today now!
+  <a href="https://bracket.today">bracket.today</a> now!
 </p>
